force-app/main/default/objects/License__c/fields/Collaborative_Status__c.field-meta.xml
<CustomField>
    <fullName>Collaborative_Status__c</fullName>
    <description>Collaborating-physician status for nurse practitioners. Read from the State License row for a given state so multi-row states resolve deterministically.</description>
    <inlineHelpText>For NPs: whether a collaborating physician agreement is in place, or not required.</inlineHelpText>
    <label>Collaborative Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>