force-app/main/default/objects/License__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>The licence, DEA or CSR number itself. The only credential attribute the original License__c model did not capture.</description>
    <label>Credential Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>