force-app/main/default/objects/License__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Physician</label>
    <referenceTo>Physician__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>