force-app/main/default/objects/License__c/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <description>Which programs this licence covers. A provider may be licensed for TCM in one state and BHI in another, so programme approval belongs to the licence, not the provider. Scheduling filters the provider picker and blocks booking on this.</description>
    <inlineHelpText>Select every program this licence permits in this state.</inlineHelpText>
    <label>Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TCM</fullName>
            </value>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>BHI</fullName>
            </value>
            <value>
                <fullName>CoCM</fullName>
            </value>
            <value>
                <fullName>Telepsych</fullName>
            </value>
            <value>
                <fullName>After Hours Telehealth</fullName>
            </value>
            <value>
                <fullName>Community Full-Time</fullName>
            </value>
            <value>
                <fullName>IPV Onboarding</fullName>
            </value>
            <value>
                <fullName>APCM</fullName>
                <isActive>false</isActive>
                <label>APCM</label>
            </value>
            <value>
                <fullName>RPM</fullName>
                <isActive>false</isActive>
                <label>RPM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>