force-app/main/default/objects/License__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The provider this credential belongs to. Added 2026-09-16: scheduling uses Provider__c, while the original Physician__c lookup is retained and unused.</description>
    <label>Provider</label>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>