force-app/main/default/objects/License__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEA</fullName>
            </value>
            <value>
                <fullName>State License</fullName>
            </value>
            <value>
                <fullName>CSR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>